--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,151 @@
-header {
-   background-color: #996DA6;
- }
- h1{
-   color: rgb(50, 11, 84);
-   font-size: 60px;
- }
- body {
-   font-size: 20px;
- }
- body div {
-   font-size: 10px;
- }
- main{
-   background-color:#DBEF9B	;
- }
- footer{
-   background-color: #FBF7A2;
-   font-size: 20;
- }
+*,
+*::before,
+*::after {
+margin: 0;
+padding: 0;
+border: 0;
+}
+li{
+  list-style: none;
+}
+a,
+a:visited{
+    text-decoration: none;
+  }
+  a:hover{
+      text-decoration: none;
+      }
+      h1,
+      h2,
+      h3{
+        font-weight: inherit;
+        font-size: inherit;
+      }
+      img{
+        vertical-align: top;
+      }
+      ul{
+        font-size: 15px;
+      }
+      p{
+        font-size: 15px;
+        }
+      #z1{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 50px;
+        font-style: normal;
+        font-weight: 800;
+        color: rgb(198, 0, 0);
+        text-align: center;
+        text-shadow: 1px 1px 3px black;
+        text-transform: uppercase;
+        text-indent: 150px;
+      }
+      #squad{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 20px;
+        color: maroon;
+        font-weight: 900;
+        font-style: oblique;
+        text-transform: uppercase;
+        text-align: center;
+        text-decoration: none;
+        text-shadow: 1px 1px 2px black;
+        white-space: normal;
+        line-height: 40px;
+      }
+      h2{
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 35px;
+        font-style: italic;
+        color:rgb(95, 11, 11);
+        font-weight: 900;
+        text-shadow: 2px 2px 2px black;
+        text-align: left;
+        text-transform: uppercase;
+        letter-spacing: 7px;
+        text-indent: 2%;
+        letter-spacing: 5px;
+        
+
+      }
+      p{
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 20px;
+        font-weight: 500;
+        color: black;
+        text-align: left;
+        text-shadow: 1px 1px 1px gray;
+        text-transform: none;
+        text-indent: 30px;
+        letter-spacing: 2px;
+        word-spacing: 4px;  
+        line-height: 20px;
+      }
+      .span1{
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 20px;
+        font-style: italic;
+        font-weight: 600;
+        text-align: left;
+        text-decoration: none;
+        text-shadow: 1px 1px 2px black;
+        color: chocolate;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        line-height: 10px; 
+      }  
+      h3{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        font-weight: 800;
+        font-style: normal;
+        text-shadow: 1px 1px 2px black;
+        text-align: center;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        word-spacing: 10px;
+      }   
+      li{
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 16px;
+        font-weight: bold;
+        font-style: oblique;
+        text-shadow: 1px 1px 2px black;
+        text-align: left;
+        text-decoration: none;
+        text-transform: uppercase;
+        text-indent: 5%;
+        letter-spacing: 8px;
+        word-spacing: 16px;
+      }
+      a.punkt1{
+        color: rgb(117, 117, 250);
+      }
+      a.punkt2,
+      a.punkt4{
+        color: black;
+      }
+      a.punkt3,
+      a.punkt5,
+      a.punkt6,
+      a.punkt7{
+        color: rgb(250, 117, 117);
+      }
+      footer{
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+        font-size: 20px;
+        font-weight: bold;
+        font-style: oblique;
+        text-shadow: 1px 1px 1px black;
+        text-align: center;
+        text-decoration: none;
+        letter-spacing: 2px;
+        word-spacing: 10px;
+
+      }
+      h3{
+        font-size: 20px;
+        color: darkblue ;
+      }    
